refactor(SignerService): linting